fix: Collaborator align

--- a/includes/blocks/mtdev-colaborations-block/src/style.scss
+++ b/includes/blocks/mtdev-colaborations-block/src/style.scss
@@ -29,6 +29,7 @@
 }
 
 .colaboration__name {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
